--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "react-portfolio-website",
   "version": "0.1.0",
   "private": true,
-  
-  "homepage":"https://masonkoh.github.io/portfolio-website/",
-  
+  "homepage": "https://masonkoh.github.io/react-portfolio-website/",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
